--- a/package.json
+++ b/package.json
@@ -1,23 +1,11 @@
 {
-  "name": "play",
+  "name": "nodejs-app",
   "version": "1.0.0",
-  "description": "bla bla",
-  "main": "app-blocking.js",
+  "main": "app.js",
   "scripts": {
-    "start":"nodemon app-blocking.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/khalid93waleed93/play.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/khalid93waleed93/play/issues"
-  },
-  "homepage": "https://github.com/khalid93waleed93/play#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.21"
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
