--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: khaledmilano93/nodejs-app:latest
+        tags: khaleddgfdfg/nodejs-app:latest
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
     - name: Set up QEMU
