--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,31 +1,36 @@
-name: Docker Image CI
+# .github/workflows/docker-image.yml
+name: Build and Push Docker image
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: khaledmilano93/nodejs-app:latest
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: khaledmilano93/nodejs-app:latest
+
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
